[package]
name = "perolas"
version = "0.1.0"
authors = ["ewilazarus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled-full"]

[dependencies.app_dirs]
version = "1.2.1"

[dependencies.clap]
version = "3.0.0-beta.1"

[dependencies.chrono]
version = "0.4"

[dependencies.fallible-streaming-iterator]
version = "0.1.9"